Fix doctor images on mobile view - improve height and border radius

--- a/src/pages/Team/Team.css
+++ b/src/pages/Team/Team.css
@@ -956,7 +956,8 @@
   }
   
   .doctor-image {
-    height: 200px;
+    height: 220px;
+    border-radius: 16px 16px 0 0;
   }
   
   .doctor-info {
@@ -971,6 +972,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 16px 16px 0 0;
   }
   
   .doctor-name {
